--- a/src/components/filter-box/filter-box.css
+++ b/src/components/filter-box/filter-box.css
@@ -1,10 +1,10 @@
 .filter-box {
-    font-family: fallIsComing;
+    background: rgb(54, 72, 110);
     color: rgb(231, 230, 231);
+    font-family: Montserrat;
     padding: 1em;
     border-radius: 1em;
     margin-bottom: 1em;
-    background: rgb(54, 72, 110);
 }
 
 .filter {
