--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -1,18 +1,17 @@
 .filter-tag {
-    font-size: 1.5em;
     background: rgb(104, 178, 99);
-    padding: 5px;
-    border-radius: 5px;
+    padding: 5px 10px;
+    border-radius: 1em;
     margin: 2px;
 }
 
 .filter-tag:hover {
-    cursor: pointer;
     background: green;
     color: rgb(231, 230, 231);
+    cursor: pointer;
 }
 
 .active {
-    color: rgb(104, 178, 99);
     background: rgb(231, 230, 231);
+    color: rgb(104, 178, 99);
 }
