--- a/src/components/add-button/add-button.css
+++ b/src/components/add-button/add-button.css
@@ -1,16 +1,15 @@
 .add-button {
-    font-family: fallIsComing;
-    color: rgb(231, 230, 231);
-    padding: 1em;
-    border-radius: 1em;
-    margin-bottom: 1em;
     width: 100%;
     background: rgb(104, 178, 99);
-    margin-top: 1em;
+    color: rgb(231, 230, 231);
+    font-family: CrimsonText;
     font-size: 1.2em;
+    padding: 10px;
+    border-radius: 1em;
+    margin: 1em 0;
 }
 
 .add-button:hover {
-    cursor: pointer;
     background: green;
+    cursor: pointer;
 }
