--- a/src/components/note/note.css
+++ b/src/components/note/note.css
@@ -1,13 +1,16 @@
 .header {
-    font-size: 3em;
+    font-family: CrimsonText;
+    font-size: 2em;
     font-weight: bold;
     margin-bottom: 0.2em;
 }
 
 .text {
-    font-size: 1.5em;
+    font-family: Montserrat;
 }
 
 .date {
+    font-family: Montserrat;
+    font-size: 0.7em;
     margin-top: 0.5em;
 }
