Migrate from .js to .jsx and code refactoring

--- a/src/components/add-button/add-button.css
+++ b/src/components/add-button/add-button.css
@@ -2,7 +2,7 @@
     width: 100%;
     background: rgb(104, 178, 99);
     color: rgb(231, 230, 231);
-    font-family: CrimsonText;
+    font-family: CrimsonText, serif;
     font-size: 1.2em;
     padding: 10px;
     border-radius: 1em;
