--- a/src/components/error-indicator/error-indicator.css
+++ b/src/components/error-indicator/error-indicator.css
@@ -1,7 +1,7 @@
 .error-header {
     background: rgb(255, 100, 100);
     color: rgb(231, 230, 231);
-    font-family: CrimsonText;
+    font-family: CrimsonText, serif;
     font-size: 1.7em;
     padding: 1em;
     border-radius: 1em;
@@ -9,14 +9,14 @@
 }
 
 summary {
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 1.5em;
 }
 
 details {
     background: rgb(54, 72, 110);
     color: rgb(231, 230, 231);
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     padding: 1em;
     border-radius: 1em;
 }
