--- a/src/components/pop-up/pop-up.css
+++ b/src/components/pop-up/pop-up.css
@@ -6,7 +6,7 @@
 
 .form > * {
     width: 100%;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 1.5em;
     padding: 10px 1em;
     border: 1px solid rgb(54, 72, 110);
