Change to white text color

--- a/src/components/add-button/add-button.css
+++ b/src/components/add-button/add-button.css
@@ -1,7 +1,7 @@
 .add-button {
     width: 100%;
     background: rgb(104, 178, 99);
-    color: rgb(231, 230, 231);
+    color: #fff;
     font-family: CrimsonText, serif;
     font-size: 1.2em;
     padding: 10px;
