--- a/src/components/filter-box/filter-box.css
+++ b/src/components/filter-box/filter-box.css
@@ -1,6 +1,6 @@
 .filter-box {
     background: rgb(54, 72, 110);
-    color: rgb(231, 230, 231);
+    color: #fff;
     font-family: Montserrat, sans-serif;
     padding: 1em;
     border-radius: 1em;
