--- a/src/components/note-feed/note-feed.css
+++ b/src/components/note-feed/note-feed.css
@@ -1,6 +1,6 @@
 .note-feed {
     background: rgb(54, 72, 110);
-    color: rgb(231, 230, 231);
+    color: #fff;
     padding: 1em;
     border-radius: 1em;
     margin-bottom: 1em;
