--- a/src/components/sort-button/sort-button.css
+++ b/src/components/sort-button/sort-button.css
@@ -1,7 +1,7 @@
 .sort-button {
     width: 100%;
     background: rgb(104, 178, 99);
-    color: rgb(231, 230, 231);
+    color: #fff;
     padding: 0.5em;
     border-radius: 1em;
     margin-bottom: 1em;
